--- a/login.html
+++ b/login.html
@@ -4,26 +4,38 @@
     <meta charset="UTF-8">
     <title>Login</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
-<main class="container w-100 h-100 bg-primary d-flex justify-content-center align-items-center">
+<main class="container w-100 h-100 d-flex justify-content-center align-items-center">
     <div class="row w-100">
-        <form action="#" class="card offset-3 col-6">
-            <div class="card-body p-1">
+        <div class="card offset-3 col-6 shadow">
+            <div class="card-body p-5">
                 <h1 class="card-title border-left border-primary pl-2 text-left">E-classe</h1>
                 <div class="card-text">
-
-
-
-
-
-
-
+                <h2 class="text-center">SIGN IN</h2>
+                <p class="text-center text-gray">
+                    Enter your credentials to access your account
+                </p>
+                    <form action="#">
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                        </div>
+                        <div class="form-group">
+                            <label for="pass">Password</label>
+                            <input type="password" class="form-control" id="pass" placeholder="Enter your password">
+                        </div>
+                        <input type="submit" role="button"class="form-control btn bg-primary text-light py-2" value="SIGN IN">
+                    </form>
+                <p class="text-gray mt-3 mb-0 text-center">
+                    Forgot your password? <a href="#" class="text-color-primary text-underline"> Reset Password</a>
+                </p>
                 </div>
             </div>
 
-        </form>
+        </div>
     </div>
 
 </main>
