--- a/login.html
+++ b/login.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="css/login.css">
 </head>
 <body>
-<main class="container w-100 h-100 d-flex justify-content-center align-items-center">
+<main class="container-lg w-100 h-100 d-flex justify-content-center align-items-center">
     <div class="row w-100">
-        <div class="card offset-3 col-6 shadow">
+        <div class="card offset-md-3 col-md-6 shadow">
             <div class="card-body p-5">
-                <h1 class="card-title border-left border-primary pl-2 text-left">E-classe</h1>
+                <h1 class="card-title border-start border-primary mb-4 text-left font-weight-bold ps-3">E-classe</h1>
                 <div class="card-text">
                 <h2 class="text-center">SIGN IN</h2>
                 <p class="text-center text-gray">
@@ -41,8 +41,6 @@
 </main>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="js/jquery.js"></script>
-<script src="js/popper.js"></script>
 <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
