--- a/student.html
+++ b/student.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard</title>
+    <title>Students</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/dashboard.css">
+    <link rel="stylesheet" href="css/student.css">
 </head>
 <body>
-<main class="container-fluid">
+<main class="container-fluid bg-gray">
     <div class="row">
         <div class="toggle col-2 col-md-3 sidebar p-1 p-md-3">
             <h1 class="text-left border-start border-3 border-md-4 border-primary ps-md-2 fw-bold fs-4 mb-3 mb-md-0">E-classe</h1>
@@ -66,7 +66,7 @@
 
         </div>
         <div class="col-9 content">
-            <div class="row navigation-bar-top">
+            <div class="row navigation-bar-top bg-white">
                 <nav class="col navbar navbar-expand d-flex justify-content-between">
                     <div class="navbar-brand">
                         <span class="ic ic-arrow btn-toggle-sidebar"></span>
@@ -88,72 +88,225 @@
                 </nav>
             </div>
             <div class="main-content row p-2 d-flex align-items-center">
-                <article class="col-12 col-md-3 pb-1">
-                    <div class="card">
-                        <div class="card-body d-flex flex-column card-students">
-                            <img src="images/ic-big-students.svg" alt="" class="card-image w-50">
-                            <p class="card-text">
-                                Students
-                            </p>
-                            <h1 class="card-title align-self-end">
-                                243
-                            </h1>
-                            
-                        </div>
-
+                <div class="col-12 main-content-toolbar d-flex pb-2 justify-content-between align-items-center border-bottom-light">
+                    <h1 class="h4 fw-bold">Students List</h1>
+                    <div class="toolbar-left-part">
+                        <button class="sort ic ic-sort btn btn-sort"></button>
+                        <button class="btn btn-primary fs-6">ADD NEW STUDENT</button>
                     </div>
-
+                </div>
+            </div>
+            <div class="table-header row mb-2">
+                <span class="offset-1 col-2 text-start">
+                    Name
+                </span>
+                <span class="col-2 text-start">
+                    Email
+                </span>
+                <span class="col-2 text-start">
+                    Phone
+                </span>
+                <span class="col-2 text-start">
+                    Enroll Number
+                </span>
+                <span class="col-3 text-start">
+                    Date of admission
+                </span>
+            </div>
+            <div class="col-12 cards">
+                <div class="col-12">
+                    <article class="card shadow">
+                        <div class="card-body row">
+                            <img src="images/student-img.jfif" alt="" class="card-image col-1">
+                            <span class="col-2 text-start">
+                                username
+                            </span>
+                            <span class="col-2 text-start">
+                                karthi@gmmail.com
+                            </span>
+                            <span class="col-2 text-start">
+                                7305477760
+                            </span>
+                            <span class="col-2 text-start">
+                                1234567305477760
+                            </span>
+                            <span class="col-2 text-start">
+                                08-Dec, 2021s
+                            </span>
+                            <span class="col-1 btns">
+                                <button class="ic ic-edit btn btn-edit">
+                                </button>
+                                <button class="ic ic-delete btn btn-delete">
+                                </button>
+                            </span>
+                        </div>
+                    </article>
+                </div>
+                <div class="col-12">
+                    <article class="card shadow">
+                        <div class="card-body row">
+                            <img src="images/student-img.jfif" alt="" class="card-image col-1">
+                            <span class="col-2 text-start">
+                                username
+                            </span>
+                            <span class="col-2 text-start">
+                                karthi@gmmail.com
+                            </span>
+                            <span class="col-2 text-start">
+                                7305477760
+                            </span>
+                            <span class="col-2 text-start">
+                                1234567305477760
+                            </span>
+                            <span class="col-2 text-start">
+                                08-Dec, 2021s
+                            </span>
+                            <span class="col-1 btns">
+                                <button class="ic ic-edit btn btn-edit">
+                                </button>
+                                <button class="ic ic-delete btn btn-delete">
+                                </button>
+                            </span>
+                        </div>
+                    </article>
+                </div><div class="col-12">
+                <article class="card shadow">
+                    <div class="card-body row">
+                        <img src="images/student-img.jfif" alt="" class="card-image col-1">
+                        <span class="col-2 text-start">
+                                username
+                            </span>
+                        <span class="col-2 text-start">
+                                karthi@gmmail.com
+                            </span>
+                        <span class="col-2 text-start">
+                                7305477760
+                            </span>
+                        <span class="col-2 text-start">
+                                1234567305477760
+                            </span>
+                        <span class="col-2 text-start">
+                                08-Dec, 2021s
+                            </span>
+                        <span class="col-1 btns">
+                                <button class="ic ic-edit btn btn-edit">
+                                </button>
+                                <button class="ic ic-delete btn btn-delete">
+                                </button>
+                            </span>
+                    </div>
                 </article>
-                <article class="col-12 col-md-3 pb-1">
-                    <div class="card">
-                        <div class="card-body d-flex flex-column card-course">
-                            <img src="images/ic-big-course.svg" alt="" class="card-image w-50">
-                            <p class="card-text">
-                                Course
-                            </p>
-                            <h1 class="card-title align-self-end">
-                                13
-                            </h1>
-
-                        </div>
-
+            </div><div class="col-12">
+                <article class="card shadow">
+                    <div class="card-body row">
+                        <img src="images/student-img.jfif" alt="" class="card-image col-1">
+                        <span class="col-2 text-start">
+                                username
+                            </span>
+                        <span class="col-2 text-start">
+                                karthi@gmmail.com
+                            </span>
+                        <span class="col-2 text-start">
+                                7305477760
+                            </span>
+                        <span class="col-2 text-start">
+                                1234567305477760
+                            </span>
+                        <span class="col-2 text-start">
+                                08-Dec, 2021s
+                            </span>
+                        <span class="col-1 btns">
+                                <button class="ic ic-edit btn btn-edit">
+                                </button>
+                                <button class="ic ic-delete btn btn-delete">
+                                </button>
+                            </span>
                     </div>
-
                 </article>
-                <article class="col-12 col-md-3 pb-1">
-                    <div class="card">
-                        <div class="card-body d-flex flex-column card-payments">
-                            <img src="images/ic-big-payments.svg" alt="" class="card-image w-50">
-                            <p class="card-text">
-                                Payments
-                            </p>
-                            <h1 class="card-title align-self-end">
-                                DHS 556,000
-                            </h1>
-
-                        </div>
-
+            </div><div class="col-12">
+                <article class="card shadow">
+                    <div class="card-body row">
+                        <img src="images/student-img.jfif" alt="" class="card-image col-1">
+                        <span class="col-2 text-start">
+                                username
+                            </span>
+                        <span class="col-2 text-start">
+                                karthi@gmmail.com
+                            </span>
+                        <span class="col-2 text-start">
+                                7305477760
+                            </span>
+                        <span class="col-2 text-start">
+                                1234567305477760
+                            </span>
+                        <span class="col-2 text-start">
+                                08-Dec, 2021s
+                            </span>
+                        <span class="col-1 btns">
+                                <button class="ic ic-edit btn btn-edit">
+                                </button>
+                                <button class="ic ic-delete btn btn-delete">
+                                </button>
+                            </span>
                     </div>
-
                 </article>
-                <article class="col-12 col-md-3 pb-1">
-                    <div class="card">
-                        <div class="card-body d-flex flex-column card-users">
-                            <img src="images/ic-big-users.svg" alt="" class="card-image w-50">
-                            <p class="card-text">
-                                Users
-                            </p>
-                            <h1 class="card-title align-self-end">
-                                3
-                            </h1>
-
-                        </div>
-
+            </div><div class="col-12">
+                <article class="card shadow">
+                    <div class="card-body row">
+                        <img src="images/student-img.jfif" alt="" class="card-image col-1">
+                        <span class="col-2 text-start">
+                                username
+                            </span>
+                        <span class="col-2 text-start">
+                                karthi@gmmail.com
+                            </span>
+                        <span class="col-2 text-start">
+                                7305477760
+                            </span>
+                        <span class="col-2 text-start">
+                                1234567305477760
+                            </span>
+                        <span class="col-2 text-start">
+                                08-Dec, 2021s
+                            </span>
+                        <span class="col-1 btns">
+                                <button class="ic ic-edit btn btn-edit">
+                                </button>
+                                <button class="ic ic-delete btn btn-delete">
+                                </button>
+                            </span>
                     </div>
-
                 </article>
             </div>
-
+                <div class="col-12">
+                    <article class="card shadow">
+                        <div class="card-body row">
+                            <img src="images/student-img.jfif" alt="" class="card-image col-1">
+                            <span class="col-2 text-start">
+                                username
+                            </span>
+                            <span class="col-2 text-start">
+                                karthi@gmmail.com
+                            </span>
+                            <span class="col-2 text-start">
+                                7305477760
+                            </span>
+                            <span class="col-2 text-start">
+                                1234567305477760
+                            </span>
+                            <span class="col-2 text-start">
+                                08-Dec, 2021s
+                            </span>
+                            <span class="col-1 btns">
+                                <button class="ic ic-edit btn btn-edit">
+                                </button>
+                                <button class="ic ic-delete btn btn-delete">
+                                </button>
+                            </span>
+                        </div>
+                    </article>
+                </div>
+            </div>
         </div>
     </div>
 </main>
