started working on the linking between the pages in the sidebar

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -31,13 +31,13 @@
                     Course
                     </p>
                 </a>
-                <a href="#" class="btn gap-2  mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
+                <a href="student.html" class="btn gap-2  mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
                     <span class="bi bi bi-mortarboard w-25 w-xs-75 me-1 me-2 me-md-0 ms-3 ms-md-0 me-md-1" style="transform:scaleX(-1);"></span>
                     <p class="w-75 text-start m-0 d-none d-md-block">
                     Students
                     </p>
                 </a>
-                <a href="#" class="btn gap-2  mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
+                <a href="payments.html" class="btn gap-2  mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
                     <span class="ic ic-payment my-md-0 my-1"></span>
                     <p class="w-75 text-start m-0 d-none d-md-block">
                         Payment
@@ -55,9 +55,9 @@
                         Settings
                     </p>
                 </a>
-                <a href="#" class="mt-md-5 mt-2 btn gap-0 d-flex justify-content-md-between justify-content-center w-75 align-items-center" >
+                <a href="login.html" class="mt-md-5 mt-2 btn gap-0 d-flex justify-content-md-between justify-content-center w-75 align-items-center" >
                     <p class="w-75 text-start m-0 d-none d-md-block ">
-                        Settings
+                        Logout
                     </p>
                     <span class="ic ic-log-out ms-3 ps-3"></span>
                 </a>
