--- a/login.html
+++ b/login.html
@@ -18,17 +18,17 @@
                 <p class="text-center text-gray">
                     Enter your credentials to access your account
                 </p>
-                    <form action="#">
-                        <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="Enter your email">
-                        </div>
-                        <div class="form-group">
-                            <label for="pass">Password</label>
-                            <input type="password" class="form-control" id="pass" placeholder="Enter your password">
-                        </div>
-                        <input type="submit" role="button"class="form-control btn bg-primary text-light py-2" value="SIGN IN">
-                    </form>
+                <form action="./Dashboard.html">
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                    </div>
+                    <div class="form-group">
+                        <label for="pass">Password</label>
+                        <input type="password" class="form-control" id="pass" placeholder="Enter your password">
+                    </div>
+                    <input type="submit" role="button"class="form-control btn bg-primary text-light py-2" value="SIGN IN">
+                </form>
                 <p class="text-gray mt-3 mb-0 text-center">
                     Forgot your password? <a href="#" class="text-color-primary text-underline"> Reset Password</a>
                 </p>
