--- a/payments.html
+++ b/payments.html
@@ -66,7 +66,7 @@
                 <a href="#"
                    class="mt-md-5 mt-2 btn gap-0 d-flex justify-content-md-between justify-content-center w-75 align-items-center">
                     <p class="w-75 text-start m-0 d-none d-md-block ">
-                        Settings
+                        Logout
                     </p>
                     <span class="ic ic-log-out ms-3 ps-3"></span>
                 </a>
