--- a/payments.html
+++ b/payments.html
@@ -20,7 +20,7 @@
                 <h6 class="text-primary text-bold mt-3 d-none d-md-block">Admin</h6>
             </div>
             <div class="menu-options-con row w-100 px-lg-5 mx-auto py-md-5 py-2 mt-3 mt-md-0 ">
-                <a href="#"
+                <a href="Dashboard.html"
                    class="btn gap-2 mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
                     <span class="bi bi-house w-25 w-xs-75 me-1 me-md-0"></span>
                     <p class="w-75 text-start m-0 d-none d-md-block">
@@ -34,7 +34,7 @@
                         Course
                     </p>
                 </a>
-                <a href="#"
+                <a href="student.html"
                    class="btn gap-2  mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
                     <span class="bi bi bi-mortarboard w-25 w-xs-75 me-1 me-2 me-md-0 ms-3 ms-md-0 me-md-1"
                           style="transform:scaleX(-1);"></span>
@@ -42,7 +42,7 @@
                         Students
                     </p>
                 </a>
-                <a href="#"
+                <a href="payments.html"
                    class="btn gap-2  bg-primary mb-4 d-flex justify-content-md-between justify-content-center w-100 align-items-center">
                     <span class="ic ic-payment my-md-0 my-1"></span>
                     <p class="w-75 text-start m-0 d-none d-md-block">
@@ -63,7 +63,7 @@
                         Settings
                     </p>
                 </a>
-                <a href="#"
+                <a href="login.html"
                    class="mt-md-5 mt-2 btn gap-0 d-flex justify-content-md-between justify-content-center w-75 align-items-center">
                     <p class="w-75 text-start m-0 d-none d-md-block ">
                         Logout
