fixed html validation in dashboard.html

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -95,9 +95,9 @@
                             <p class="card-text">
                                 Students
                             </p>
-                            <h1 class="card-title align-self-end">
+                            <h2 class="card-title align-self-end h1">
                                 243
-                            </h1>
+                            </h2>
                             
                         </div>
 
@@ -111,9 +111,9 @@
                             <p class="card-text">
                                 Course
                             </p>
-                            <h1 class="card-title align-self-end">
+                            <h2 class="card-title align-self-end h1">
                                 13
-                            </h1>
+                            </h2>
 
                         </div>
 
@@ -127,9 +127,9 @@
                             <p class="card-text">
                                 Payments
                             </p>
-                            <h1 class="card-title align-self-end">
+                            <h2 class="card-title align-self-end h1">
                                 DHS 556,000
-                            </h1>
+                            </h2>
 
                         </div>
 
@@ -143,9 +143,9 @@
                             <p class="card-text">
                                 Users
                             </p>
-                            <h1 class="card-title align-self-end">
+                            <h2 class="card-title align-self-end h1">
                                 3
-                            </h1>
+                            </h2>
 
                         </div>
 
