fixed html validation in login.html

--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
                         <label for="pass">Password</label>
                         <input type="password" class="form-control" id="pass" placeholder="Enter your password">
                     </div>
-                    <input type="submit" role="button"class="form-control btn bg-primary text-light py-2" value="SIGN IN">
+                    <input type="submit" class="form-control btn bg-primary text-light py-2" value="SIGN IN">
                 </form>
                 <p class="text-gray mt-3 mb-0 text-center">
                     Forgot your password? <a href="#" class="text-color-primary text-underline"> Reset Password</a>
