fixed html validation in Payments.html

--- a/payments.html
+++ b/payments.html
@@ -127,7 +127,7 @@
             </div>
             <div class="col-12 cards">
                 <div class="col-12">
-                    <article class="card">
+                    <div class="card">
                         <div class="card-body row">
                             <span class="col-1 text-start">
                                 Karth
@@ -152,7 +152,91 @@
                                 </button>
                             </span>
                         </div>
-                    </article>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-body row">
+                            <span class="col-1 text-start">
+                                Karth
+                            </span>
+                            <span class="col-2 text-start">
+                               First
+                            </span>
+                            <span class="col-2 text-start">
+                                00012223
+                            </span>
+                            <span class="col-2 text-start">
+                                DHS 100,000
+                            </span>
+                            <span class="col-2 text-start">
+                                DHS 500,000
+                            </span>
+                            <span class="col-2 text-start">
+                                 05-Jan, 2022
+                            </span>
+                            <span class="col-1 btns">
+                                <button class="ic ic-eye btn btn-details">
+                                </button>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-body row">
+                            <span class="col-1 text-start">
+                                Karth
+                            </span>
+                            <span class="col-2 text-start">
+                               First
+                            </span>
+                            <span class="col-2 text-start">
+                                00012223
+                            </span>
+                            <span class="col-2 text-start">
+                                DHS 100,000
+                            </span>
+                            <span class="col-2 text-start">
+                                DHS 500,000
+                            </span>
+                            <span class="col-2 text-start">
+                                 05-Jan, 2022
+                            </span>
+                            <span class="col-1 btns">
+                                <button class="ic ic-eye btn btn-details">
+                                </button>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-body row">
+                            <span class="col-1 text-start">
+                                Karth
+                            </span>
+                            <span class="col-2 text-start">
+                               First
+                            </span>
+                            <span class="col-2 text-start">
+                                00012223
+                            </span>
+                            <span class="col-2 text-start">
+                                DHS 100,000
+                            </span>
+                            <span class="col-2 text-start">
+                                DHS 500,000
+                            </span>
+                            <span class="col-2 text-start">
+                                 05-Jan, 2022
+                            </span>
+                            <span class="col-1 btns">
+                                <button class="ic ic-eye btn btn-details">
+                                </button>
+                            </span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
