fixed html validation in student.html

--- a/student.html
+++ b/student.html
@@ -115,7 +115,7 @@
             </div>
             <div class="col-12 cards">
                 <div class="col-12">
-                    <article class="card shadow">
+                    <div class="card shadow">
                         <div class="card-body row">
                             <img src="images/student-img.jfif" alt="" class="card-image col-1">
                             <span class="col-2 text-start">
@@ -140,10 +140,10 @@
                                 </button>
                             </span>
                         </div>
-                    </article>
+                    </div>
                 </div>
                 <div class="col-12">
-                    <article class="card shadow">
+                    <div class="card shadow">
                         <div class="card-body row">
                             <img src="images/student-img.jfif" alt="" class="card-image col-1">
                             <span class="col-2 text-start">
@@ -168,9 +168,9 @@
                                 </button>
                             </span>
                         </div>
-                    </article>
+                    </div>
                 </div><div class="col-12">
-                <article class="card shadow">
+                <div class="card shadow">
                     <div class="card-body row">
                         <img src="images/student-img.jfif" alt="" class="card-image col-1">
                         <span class="col-2 text-start">
@@ -195,9 +195,9 @@
                                 </button>
                             </span>
                     </div>
-                </article>
+                </div>
             </div><div class="col-12">
-                <article class="card shadow">
+                <div class="card shadow">
                     <div class="card-body row">
                         <img src="images/student-img.jfif" alt="" class="card-image col-1">
                         <span class="col-2 text-start">
@@ -222,9 +222,9 @@
                                 </button>
                             </span>
                     </div>
-                </article>
+                </div>
             </div><div class="col-12">
-                <article class="card shadow">
+                <div class="card shadow">
                     <div class="card-body row">
                         <img src="images/student-img.jfif" alt="" class="card-image col-1">
                         <span class="col-2 text-start">
@@ -249,9 +249,9 @@
                                 </button>
                             </span>
                     </div>
-                </article>
+                </div>
             </div><div class="col-12">
-                <article class="card shadow">
+                <div class="card shadow">
                     <div class="card-body row">
                         <img src="images/student-img.jfif" alt="" class="card-image col-1">
                         <span class="col-2 text-start">
@@ -276,10 +276,10 @@
                                 </button>
                             </span>
                     </div>
-                </article>
+                </div>
             </div>
                 <div class="col-12">
-                    <article class="card shadow">
+                    <div class="card shadow">
                         <div class="card-body row">
                             <img src="images/student-img.jfif" alt="" class="card-image col-1">
                             <span class="col-2 text-start">
@@ -304,7 +304,7 @@
                                 </button>
                             </span>
                         </div>
-                    </article>
+                    </div>
                 </div>
             </div>
         </div>
