now payments page is responsive

--- a/payments.html
+++ b/payments.html
@@ -105,7 +105,7 @@
                     </div>
                 </div>
             </div>
-            <div class="table-header row mb-2 ps-2">
+            <div class="table-header d-none d-lg-flex row mb-2 ps-2">
                 <span class="col-1 text-start ps-2">
                     Name
                 </span>
@@ -128,116 +128,33 @@
             <div class="col-12 cards">
                 <div class="col-12">
                     <div class="card">
-                        <div class="card-body row">
-                            <span class="col-1 text-start">
+                        <div class="card-body row d-flex flex-column flex-lg-row">
+                            <span class="col-lg-1 text-start">
                                 Karth
                             </span>
-                            <span class="col-2 text-start">
+                            <span class="col-lg-2 text-start">
                                First
                             </span>
-                            <span class="col-2 text-start">
+                            <span class="col-lg-2 text-start">
                                 00012223
                             </span>
-                            <span class="col-2 text-start">
+                            <span class="col-lg-2 text-start">
                                 DHS 100,000
                             </span>
-                            <span class="col-2 text-start">
+                            <span class="col-lg-2 text-start">
                                 DHS 500,000
                             </span>
-                            <span class="col-2 text-start">
+                            <span class="col-lg-2 text-start">
                                  05-Jan, 2022
                             </span>
-                            <span class="col-1 btns">
+                            <span class="col-lg-1 btns">
                                 <button class="ic ic-eye btn btn-details">
                                 </button>
                             </span>
                         </div>
                     </div>
                 </div>
-                <div class="col-12">
-                    <div class="card">
-                        <div class="card-body row">
-                            <span class="col-1 text-start">
-                                Karth
-                            </span>
-                            <span class="col-2 text-start">
-                               First
-                            </span>
-                            <span class="col-2 text-start">
-                                00012223
-                            </span>
-                            <span class="col-2 text-start">
-                                DHS 100,000
-                            </span>
-                            <span class="col-2 text-start">
-                                DHS 500,000
-                            </span>
-                            <span class="col-2 text-start">
-                                 05-Jan, 2022
-                            </span>
-                            <span class="col-1 btns">
-                                <button class="ic ic-eye btn btn-details">
-                                </button>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12">
-                    <div class="card">
-                        <div class="card-body row">
-                            <span class="col-1 text-start">
-                                Karth
-                            </span>
-                            <span class="col-2 text-start">
-                               First
-                            </span>
-                            <span class="col-2 text-start">
-                                00012223
-                            </span>
-                            <span class="col-2 text-start">
-                                DHS 100,000
-                            </span>
-                            <span class="col-2 text-start">
-                                DHS 500,000
-                            </span>
-                            <span class="col-2 text-start">
-                                 05-Jan, 2022
-                            </span>
-                            <span class="col-1 btns">
-                                <button class="ic ic-eye btn btn-details">
-                                </button>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12">
-                    <div class="card">
-                        <div class="card-body row">
-                            <span class="col-1 text-start">
-                                Karth
-                            </span>
-                            <span class="col-2 text-start">
-                               First
-                            </span>
-                            <span class="col-2 text-start">
-                                00012223
-                            </span>
-                            <span class="col-2 text-start">
-                                DHS 100,000
-                            </span>
-                            <span class="col-2 text-start">
-                                DHS 500,000
-                            </span>
-                            <span class="col-2 text-start">
-                                 05-Jan, 2022
-                            </span>
-                            <span class="col-1 btns">
-                                <button class="ic ic-eye btn btn-details">
-                                </button>
-                            </span>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
     </div>
